# android-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  structure.txt
examples/: client.c  client.py  server.py
src/: main.cpp
